blog risk classification chart: Vertical align fixed

--- a/style.less
+++ b/style.less
@@ -2520,7 +2520,6 @@ p{
 
 
 
-
 //blog post table has a selected highlihted cell. others should NOT have hover effects in that table
 .fe-block-5b69034db40bf584e34b, 
  .fe-block-5b69034db40bf584e34b, 
@@ -2595,7 +2594,7 @@ p{
   }
 
 //MANUAL BLOG RISK CLASSIFICATION - blog post has weird extra paddings we need to remove to prevent layout issues
-  .fluid-engine.fe-642ea9e4f4bfb7196da20c8e .sqs-block {
+  .fluid-engine.fe-642ea9e4f4bfb7196da20c8e .fe-block .sqs-block.html-block {
     padding: 0 !important;
 }
 
